syntax = "proto3";
package swap.swap;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "swap/swap/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "swap/x/swap/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/swap/swap/params";
  }
  // Queries a list of Show items.
	rpc Show(QueryShowRequest) returns (QueryShowResponse) {
		option (google.api.http).get = "/swap/swap/show/{id}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryShowRequest {
  string id = 1;
}

message QueryShowResponse {
  string sender = 1;
  string receiver = 2;
  string amountToSend = 3;
  string amountToReceive = 4;
}

// this line is used by starport scaffolding # 3
